--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,4 @@ firebase-admin==7.1.0
 python-dotenv==1.0.0
 Werkzeug==3.1.3
 Jinja2==3.1.5
-
-#Updated to the latest version of the libraries
+gunicorn==21.2.0
